Please let this work

--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
             
               <div class="banner-ad large bg-info block-1">
 
-                <div class="swiper main-swiper">
-                  <div class="swiper-wrapper">
+                <div class="swiperr main-swiperr">
+                  <div class="swiperr-wrapper">
                     
-                    <div class="swiper-slide">
+                    <div class="s-slide">
                       <div class="row banner-content p-5">
                         <div class="content-wrapper col-md-7">
                           <div class="categories my-3">40% off</div>
