--- a/admin.html
+++ b/admin.html
@@ -203,10 +203,11 @@
 
             async loadData() {
                 try {
-                    const response = await fetch('products.json');
+                    const response = await fetch('https://api.jsonbin.io/v3/b/68a9b08143b1c97be9266c0d/latest');
                     const data = await response.json();
-                    this.products = data.products.all;
-                    this.categories = data.categories;
+this.products = data.record.products.all;
+this.categories = data.record.categories;
+
                     
                     this.renderProductsTable();
                     this.renderCategoriesTable();
@@ -471,9 +472,6 @@
                         all: this.products
                     }
                 };
-                
-                // This would normally save to a server
-                // For now, we'll just log it and provide download functionality
                 console.log('Updated JSON:', data);
             }
 
