--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="col-sm-8 col-lg-4 d-flex justify-content-end gap-5 align-items-center mt-4 mt-sm-0 justify-content-center justify-content-sm-end">
             <div class="support-box text-end d-none d-xl-block">
               <span class="fs-6 text">For Support?</span>
-              <h5 class="mb-0">+91-9310033590</h5>
+              <h5 class="mb-0">+91-9525507352</h5>
             </div>
 
             <ul class="d-flex justify-content-end list-unstyled m-0">
@@ -143,7 +143,7 @@
             <div class="cart text-end d-none d-lg-block dropdown">
               <button class="border-0 bg-transparent d-flex flex-column gap-2 lh-1" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCart" aria-controls="offcanvasCart">
                 <span class="fs-6 dropdown-toggle">Your Cart</span>
-                <span class="cart-total fs-5 fw-bold">$0.00</span>
+                <span class="cart-total fs-5 fw-bold">₹0.00</span>
               </button>
             </div>
           </div>
